src/parse/snapshots/camello__parse__tests__success__code_ref_call_direct_subscription.pl.snap
---
source: src/parse/tests.rs
expression: rendered
---
ROOT
  EXPR_STMT
    LIST_EXPR
      ARRAY_SUBSCRIPT_EXPR
        CODE_CALL_EXPR
          SCALAR_VAR
            `$` "$"
            identifier "code"
          `->` "->"
          ARG_LIST
            `(` "("
            LIST_EXPR
            `)` ")"
        `[` "["
        SUBSCRIPT
          LITERAL
            number "0"
        `]` "]"
    `;` ";"
