src/parse/snapshots/camello__parse__tests__success__empty_list_array_subscription.pl.snap
---
source: src/parse/tests.rs
expression: rendered
---
ROOT
  EXPR_STMT
    LIST_EXPR
      ARRAY_SUBSCRIPT_EXPR
        PAREN_EXPR
          `(` "("
          LIST_EXPR
          `)` ")"
        `[` "["
        SUBSCRIPT
          LITERAL
            number "0"
        `]` "]"
    `;` ";"
