src/parse/snapshots/camello__parse__tests__success__hash_then_array_subscription.pl.snap
---
source: src/parse/tests.rs
expression: rendered
---
ROOT
  EXPR_STMT
    LIST_EXPR
      ARRAY_SUBSCRIPT_EXPR
        HASH_SUBSCRIPT_EXPR
          CALL_EXPR
            SUB_NAME
              identifier "h"
            ARG_LIST
              `(` "("
              LIST_EXPR
              `)` ")"
          `->` "->"
          `{` "{"
          SUBSCRIPT
            SUB_NAME
              identifier "k"
          `}` "}"
        `[` "["
        SUBSCRIPT
          LITERAL
            number "0"
        `]` "]"
    `;` ";"
  EXPR_STMT
    LIST_EXPR
      HASH_SUBSCRIPT_EXPR
        ARRAY_SUBSCRIPT_EXPR
          HASH_SUBSCRIPT_EXPR
            CALL_EXPR
              SUB_NAME
                identifier "h"
              ARG_LIST
                `(` "("
                LIST_EXPR
                `)` ")"
            `->` "->"
            `{` "{"
            SUBSCRIPT
              SUB_NAME
                identifier "k"
            `}` "}"
          `[` "["
          SUBSCRIPT
            LITERAL
              number "0"
          `]` "]"
        `->` "->"
        `{` "{"
        SUBSCRIPT
          SUB_NAME
            identifier "a"
        `}` "}"
    `;` ";"
