src/parse/snapshots/camello__parse__tests__success__leading_dot_number.pl.snap
---
source: src/parse/tests.rs
expression: rendered
---
ROOT
  VAR_DECL_STMT
    LIST_EXPR
      ASSIGN_EXPR
        VAR_DECL
          `my` "my"
          DECL_TARGET
            SCALAR_VAR
              `$` "$"
              identifier "half"
        `=` "="
        LITERAL
          number ".5"
    `;` ";"
  VAR_DECL_STMT
    LIST_EXPR
      ASSIGN_EXPR
        VAR_DECL
          `my` "my"
          DECL_TARGET
            SCALAR_VAR
              `$` "$"
              identifier "bias"
        `=` "="
        PREFIX_EXPR
          `-` "-"
          LITERAL
            number ".01"
    `;` ";"
  VAR_DECL_STMT
    LIST_EXPR
      ASSIGN_EXPR
        VAR_DECL
          `my` "my"
          DECL_TARGET
            HASH_VAR
              `%` "%"
              identifier "opt"
        `=` "="
        PAREN_EXPR
          `(` "("
          LIST_EXPR
            LIST_CALL_EXPR
              SUB_NAME
                identifier "wait"
            `=>` "=>"
            LITERAL
              number ".1"
            `,` ","
            LIST_CALL_EXPR
              SUB_NAME
                identifier "retries"
            `=>` "=>"
            LITERAL
              number "1"
          `)` ")"
    `;` ";"
  VAR_DECL_STMT
    LIST_EXPR
      ASSIGN_EXPR
        VAR_DECL
          `my` "my"
          DECL_TARGET
            SCALAR_VAR
              `$` "$"
              identifier "scaled"
        `=` "="
        BINARY_EXPR
          SCALAR_VAR
            `$` "$"
            identifier "max"
          `*` "*"
          PREFIX_EXPR
            `-` "-"
            LITERAL
              number ".1"
    `;` ";"
  VAR_DECL_STMT
    LIST_EXPR
      ASSIGN_EXPR
        VAR_DECL
          `my` "my"
          DECL_TARGET
            SCALAR_VAR
              `$` "$"
              identifier "sum"
        `=` "="
        BINARY_EXPR
          LITERAL
            number ".5"
          `+` "+"
          LITERAL
            number ".5"
    `;` ";"
  EXPR_STMT
    LIST_EXPR
      LIST_CALL_EXPR
        SUB_NAME
          identifier "substr"
        LIST_EXPR
          SCALAR_VAR
            `$` "$"
            identifier "text"
          `,` ","
          BINARY_EXPR
            SCALAR_VAR
              `$` "$"
              identifier "max"
            `*` "*"
            PREFIX_EXPR
              `-` "-"
              LITERAL
                number ".1"
          `,` ","
          BINARY_EXPR
            SCALAR_VAR
              `$` "$"
              identifier "max"
            `*` "*"
            LITERAL
              number ".1"
    `;` ";"
  VAR_DECL_STMT
    LIST_EXPR
      ASSIGN_EXPR
        VAR_DECL
          `my` "my"
          DECL_TARGET
            SCALAR_VAR
              `$` "$"
              identifier "joined"
        `=` "="
        BINARY_EXPR
          SCALAR_VAR
            `$` "$"
            identifier "a"
          `.` "."
          LITERAL
            number "5"
    `;` ";"
  VAR_DECL_STMT
    LIST_EXPR
      ASSIGN_EXPR
        VAR_DECL
          `my` "my"
          DECL_TARGET
            SCALAR_VAR
              `$` "$"
              identifier "range"
        `=` "="
        RANGE_EXPR
          LITERAL
            number ".5"
          `..` ".."
          LITERAL
            number "1.5"
    `;` ";"
